--- a/floating.css
+++ b/floating.css
@@ -23,7 +23,7 @@
 }
 
 body {
-  
+
    padding:0px;
    margin:0px;
    width:100%;
@@ -171,11 +171,149 @@ body {
 }
 
 
+.fab {
+  position: absolute;
+  z-index: 1;
+  bottom: 16px;
+  left:  -16px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 
-.mike{
-  border: 2px solid red;
-  padding: 5px;
-  border-radius: 25px;
-  margin-right: -10px;
-  margin-top: -2px;
+}
+.fab .trigger, .fab .action {
+  border-radius: 50%;
+
+  cursor: pointer;
+  position: relative;
+
+  z-index: 100000;
+
+}
+.fab .trigger:active, .fab .action:active {
+  opacity: .7;
+  position: relative;
+
+  z-index: 100000;
+
+}
+.fab .trigger {
+  position: relative;
+  z-index: 100000;
+  color: black;
+  height: 56px;
+  width: 56px;
+  line-height: 56px;
+  vertical-align: middle;
+  font-size: 1.5em;
+  top:35px;
+  left: 5px;
+
+}
+.fab .action {
+  position: absolute;
+  top: 0;
+  margin: 0 8px;
+  background: #fff;
+  color: #333;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+}
+.fab .actions {
+  position: absolute;
+
+  z-index: 1;
+
+  margin-left: 13px;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+.fab.open .actions {
+  opacity: 1;
+  position: absolute;
+
+  z-index: 1;
+
+}
+.fab.open .actions .action:nth-child(1) {
+  -webkit-transform: translateY(-90px);
+          transform: translateY(-90px);
+}
+.fab.open .actions .action:nth-child(2) {
+  -webkit-transform: translateY(-140px);
+          transform: translateY(-140px);
+}
+.fab.open .actions .action:nth-child(3) {
+  -webkit-transform: translateY(-190px);
+          transform: translateY(-190px);
+}
+.fab.open .actions .action:nth-child(4) {
+  -webkit-transform: translateY(-240px);
+          transform: translateY(-240px);
+}
+.fab.open .tooltip {
+  opacity: 1;
+  -webkit-transform: translateY(-50%) scale(1);
+          transform: translateY(-50%) scale(1);
+
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+.fab .tooltip {
+  position: absolute;
+  margin-left:50px;
+  top: 50%;
+  width: 50vw;
+  -webkit-transform: translateY(-50%) scale(0);
+          transform: translateY(-50%) scale(0);
+  -webkit-transform-origin: right center 0;
+          transform-origin: right center 0;
+  text-align: left;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  opacity: 0;
+  color: black;
+
+}
+
+
+.footer-heart{text-align:center;font-family: open sans, sans-serif;}
+
+.footer-heart a{border-bottom: 1px solid #453886;color: #453886;padding-bottom: .25em; text-decoration: none;}
+
+.footer-heart a:hover{color:#2196f3; background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 20%;
+  border-bottom: 0;
+  padding-bottom: .3em;
+  text-decoration: none;}
+
+.emoji{vertical-align: middle;}
+
+.power {
+    position: absolute;
+    z-index: 10;
+    top: 60;
+    margin-top: 0;
+    color: #000;
+    left: 50%;
+    margin-left: -65px;
+    padding: 0;
+}
+.log {
+    color: white;
+    font-size: 12px;
+    text-align: center;
+}
+.col-xs-12 {
+    width: 100%;
+}
+.col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    float: left;
 }
